# bevy-snake

./: .gitignore  Cargo.toml  README.md  build-for-web
src/: ai.rs  apples.rs  board.rs  effects.rs  fps_counter.rs  game.rs  guns.rs  main.rs  meshing.rs  render.rs  snake.rs  ui.rs  walls.rs  web.rs
web/: index.html
