[package]
name = "bevy-snake"
version = "0.2.0"
edition = "2021"
description = "SNAKE WITH GUNS!"

# note: use these commands to build for web. you will need to add the assets folder and an index.html file for everything to work
# cargo build --release --target wasm32-unknown-unknown
# wasm-bindgen --out-dir ./out/ --target web ./target/wasm32-unknown-unknown/release/bevy-snake.wasm

[dependencies]
bevy = "0.13"
rand = "0.8.5"
bevy-inspector-egui = "0.24"
