[package]
name = "bevy-snake"
version = "0.2.0"
edition = "2021"
description = "SNAKE WITH GUNS!"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_state",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "vorbis",
    "x11",
    "bevy_gizmos",
    "webgl2",
    "bevy_debug_stepping",
] }
bevy-inspector-egui = "0.25"
rand = "0.8.5"
thiserror = "1.0"
